update react requirements

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-input-slider",
+  "name": "st-react-input-slider",
   "version": "1.5.0",
   "description": "React input slider component",
   "main": "index.js",
@@ -29,8 +29,8 @@
   },
   "homepage": "https://github.com/wangzuo/react-input-slider",
   "peerDependencies": {
-    "react": "^0.14.0",
-    "react-dom": "^0.14.0"
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2"
   },
   "devDependencies": {
     "babel-core": "^6.1.2",
